@@ -8,6 +8,7 @@ import javax.swing.event.EventListenerList;
 
 import edu.colorado.phet.capacitorlab.CLConstants;
 import edu.colorado.phet.capacitorlab.CLStrings;
+import edu.colorado.phet.capacitorlab.model.DielectricMaterial.Air;
 import edu.colorado.phet.capacitorlab.model.ICapacitor.CapacitorChangeListener;
 import edu.colorado.phet.capacitorlab.model.Wire.BottomWire;
 import edu.colorado.phet.capacitorlab.model.Wire.TopWire;
@@ -42,6 +43,10 @@ public class BatteryCapacitorCircuit extends AbstractCircuit {
     private Property<Boolean> batteryConnectedProperty; // is the battery connected to the circuit?
     private double disconnectedPlateCharge; // charge set manually by the user, used when battery is disconnected
     private double previousTotalCharge; // total charge the previous time the clock ticked, used to compute current amplitude
+
+    public BatteryCapacitorCircuit( IClock clock, CLModelViewTransform3D mvt ) {
+        this( clock, mvt, 0.01 /* plateWidth */, 0.005 /* plateSeparation */, new Air(), 0 /* dielectricOffset */, true /* batteryConnected */ );
+    }
 
     public BatteryCapacitorCircuit( IClock clock, CLModelViewTransform3D mvt, double plateWidth, double plateSeparation, DielectricMaterial dielectricMaterial, double dielectricOffset, boolean batteryConnected ) {
         super( CLStrings.SINGLE );
